--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,20 @@
-final.go
-smth.go
-test.go
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+
+*.test
+
+*.out
+
+/vendor/
+/Godeps/
+
+.fuse_hidden*
+
+.directory
+
+.Trash-*
+
+.nfs*
