--- a/app.yaml
+++ b/app.yaml
@@ -1,10 +1,1 @@
-runtime: go112
-env: flex
-service: tgapi
-network:
-  name:
-    -kolobikenet
-  session_affinity: true
-  forwarded_ports:
-    - 5432:5432
-    - 8080:8080
+runtime: Dockerfile
